tests/ui/const-generics/associated-const-bindings/dyn-compat-const-projection-from-supertrait-mentions-self.stderr
error[E0191]: the value of the associated constant `K` in `Y` must be specified
  --> $DIR/dyn-compat-const-projection-from-supertrait-mentions-self.rs:18:16
   |
LL |     const K: usize;
   |     -------------- `K` defined here
...
LL |     let _: dyn X<Q = 10>;
   |                ^^^^^^^^^ help: specify the associated constant: `X<Q = 10, K = /* CONST */>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
